assets/css/style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    background-color: #d9dcd6;
}

.header {
    padding: 20px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: #2a607c;
    color: #ffffff;
}

#h1-id {
    display: inline-block;
    font-size: 48px;
}

.header h1 .seo {
    color: #d9dcd6;
}

/* linked class element from DIV change */
.top-nav {
    padding-top: 15px;
    margin-right: 25px;
    float: right;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
}

/* linked unique id for UL items */
#nav-links {
    display:inline-block;
    margin-left: 25px;
}


a {
    color: #ffffff;
    text-decoration: none;
}

p {
    font-size: 16px;
}

/* moved image path to the html */
.hero {
    height: 100%;
    width: 100%;
    margin-bottom: 25px;
}
/* moved content class in order of html code */
.content {
    width: 75%;
    display: inline-block;
    margin-left: 20px;
}

.float-left {
    float: left;
    margin-right: 25px;
}

.float-right {
    float: right;
    margin-left: 25px;
}

.positioning-lft-all {
    margin-bottom: 20px;
    padding: 50px;
    height: 300px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
}

#image-size-all {
    max-height: 200px;
}


#h2-all {
    margin-bottom: 20px;
    font-size: 36px;
}
/* consolidated all the css for positioning and sizing for the benefits section */
.benefits {
    margin-right: 20px;
    padding: 20px;
    clear: both;
    float: right;
    width: 20%;
    height: 100%;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #2589bd;
}

.benefit-all-positioning {
    margin-bottom: 32px;
    color: #ffffff;
}

#benefit-position-h3-all {
    margin-bottom: 10px;
    text-align: center;
}

#all-icon-size {
    display: block;
    margin: 10px auto;
    max-width: 150px;
}


.footer {
    padding: 30px;
    clear: both;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    text-align: center;
}
/* added and ID for the footer txt */
#footer-txt {
    font-size: 20px;
}

